[package]
name = "lab-12"
version = "0.2.2"
edition = "2024"

[dependencies]
uuid = { version = "1.19", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
tokio = { version = "1.48", features = ["full"] }
module_system = { path = "../la1/solution/", package = "assignment-1-solution" }

[dev-dependencies]
ntest = "0.9"
tokio = { version = "1.48", features = ["full", "test-util"] }

[[bin]]
name = "lab10"
path = "main.rs"

[lints.rust]
unsafe_code = "forbid"
